[flake8]
max-line-length = 120
extend-ignore = E203, E266, E501, W503, E741
exclude = .svn,CVS,.bzr,.hg,.git,__pycache__,venv/*
max-complexity=32
per-file-ignores =
    *:F821
    */__init__.py: F401

[mypy]
strict_optional = True
ignore_missing_imports = True
follow_imports = skip
cache_dir = /dev/null
exclude = templates

[metadata]
license_files = LICENSE
